--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "file-system": "^1.2.2",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "mongoose": "^6.8.4",
     "multer": "^1.4.5-lts.1",
