--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "mongoose": "^6.8.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^3.0.4",
     "nodemailer": "^6.9.0",
