--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cropperjs": "^1.5.13",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -29,6 +30,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "razorpay": "^2.8.4",
+    "sharp": "^0.31.3",
     "stripe": "^11.10.0"
   }
 }
