--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cropperjs": "^1.5.13",
@@ -25,8 +26,10 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nocache": "^3.0.4",
     "nodemailer": "^6.9.0",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "razorpay": "^2.8.4",
